cloudformation/security_stack.yml
AWSTemplateFormatVersion: '2010-09-09'

Description:
  Security Stack Template.

Parameters:
  EnvName:
    Description: An environment name that will be prefixed to resource names
    Type: String
    AllowedPattern: "[a-zA-Z0-9]+"

  EnvType:
    Description: The type of the enviroment
    Type: String
    AllowedValues:
      - LIVE
      - STAGING
      - DEV

  VPC:
    Type: AWS::EC2::VPC::Id

  Subnets:
    Type: List<AWS::EC2::Subnet::Id>

  RDSrequired:
    Type: String
    Description: Is RDS stack required?
    AllowedValues:
      - Required
      - Not Required

Conditions:
  isRDSrequired:
    !Equals [!Ref RDSrequired, "Required"]

Resources:
  ##############################################################
  ## SECURITY GROUPS
  ##

  ## SECURITY GROUPS::Load Balancer
  ############################################
  LBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join [" ", [!Ref EnvName, !Ref EnvType, ALB]]
      GroupDescription: !Join [" ", [!Ref EnvName, !Ref EnvType, ALB]]
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp:
        Description: Your IP
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: xx.xx.xx.xx
        Description: Your IP

  ## SECURITY GROUPS::EC2
  ############################################
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join [" ", [!Ref EnvName, !Ref EnvType, EC2]]
      GroupDescription: !Join [" ", [!Ref EnvName, !Ref EnvType, EC2]]
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: xx.xx.xx.xx
        Description: Your IP
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        SourceSecurityGroupId: !Ref LBSecurityGroup
        Description: ALB
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: xx.xx.xx.xx
        Description: Your IP


  ## SECURITY GROUPS::RDS
  ############################################
  DatabaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Condition: isRDSrequired
    Properties:
      GroupName:  !Join [" ", [!Ref EnvName, !Ref EnvType, RDS]]
      GroupDescription:  !Join [" ", [!Ref EnvName, !Ref EnvType, RDS]]
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 3306
        ToPort: 3306
        SourceSecurityGroupId: sg-00e7efaeef5489859
        Description: Bastion
      - IpProtocol: tcp
        FromPort: 3306
        ToPort: 3306
        SourceSecurityGroupId: !Ref EC2SecurityGroup
        Description: !Join [" ", [EC2, !Ref EnvType]]

Outputs:
  ALBSG:
    Description: "ELB Security Group ID"
    Value:
      Ref: LBSecurityGroup

  EC2SG:
    Description: "Web Server Security Group ID"
    Value:
      Ref: EC2SecurityGroup

  DatabaseSecurityGroup:
    Condition: isRDSrequired
    Description: "RDS Security Group ID"
    Value:
      Ref: DatabaseSecurityGroup
